@@ -1,5 +1,15 @@
 2010-11-25  Murray Cumming  <murrayc@murrayc.com>
 
+	ComboBoxEntryText: Deprecate in favour of ComboBoxText.
+
+	* gtk/gtkmm/comboboxtext.[h|cc]: Added a constructor with a bool has_entry 
+	parameter.
+	* gtk/gtkmm/comboboxentrytext.[h|cc]: Deprecate this whole class, telling 
+	peopel to use ComboBoxText with has_entry=true, just as we have deprecated 
+	ComboBoxEntry for Combobox with has_entry=true.
+
+2010-11-25  Murray Cumming  <murrayc@murrayc.com>
+
 	Fix gtk_methods.defs.
 
 	* gtk/src/gtk_methods.defs: Add back the gtk-unix-print-2.0 stuff that 
